Doesn't show scrollbar on header any more, fix height for one or multiples rows (#205)
* Fixing table row heights and table header height

* Doesn't show scrollbar on header any more, fix height for one or multiples rows

* delete unused constant

* delete traceswq

* deleted un used import which make windows version fail on build

* uncomment overflow for cells

--- a/src/renderer/components/query-result-table.scss
+++ b/src/renderer/components/query-result-table.scss
@@ -65,7 +65,7 @@
 }
 
 .Grid.grid-header-row {
-  overflow: hidden;
+  overflow: hidden !important;
   background: #f9fafb;
   border: 1px solid rgba(34,36,38,.1);
   border-right: none;
